<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/system_dialog_main_lnlay"
        android:orientation="vertical"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/system_dialog_title_txtvw"
            android:textColor="@color/foregroundLightColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/placeholder"
            android:gravity="center"
            android:textSize="@dimen/text_large"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_medium"/>

        <TextView
            android:id="@+id/system_dialog_message_content_txtvw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:nestedScrollingEnabled="true"
            android:textSize="@dimen/text_small_medium"
            android:text="@string/lorem_ipsum_200"/>

        <LinearLayout
            android:id="@+id/system_dialog_buttons_lnlay"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/foregroundLightColor"
                android:id="@+id/system_dialog_okay_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/text_small_medium"
                android:maxLines="1"
                android:text="@string/close_button"/>

            <Button
                android:backgroundTint="@color/secondaryColor"
                android:textColor="@color/secondaryTextColor"
                android:id="@+id/system_dialog_post_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/text_small_medium"
                android:maxLines="1"
                android:text="@string/see_post_dialog_btn_text"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>