<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/change_password_main_lnlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/verify_your_credentials"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/change_password_actual_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:hint="@string/hint_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/change_password_actual_password_edtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/change_password_actual_password_vw"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/margin_medium"
            android:background="@drawable/rule" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/new_password"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/change_password_new_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:hint="@string/hint_new_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/change_password_new_password_edtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/change_password_confirm_new_password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:hint="@string/hint_confirma_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/change_password_confirm_new_password_edtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_medium_large"/>

        <Button
            android:id="@+id/change_password_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/secondaryColor"
            android:text="@string/change_password" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>