<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/foregroundColor">

    <LinearLayout
        android:id="@+id/login_layout_main_lnlay"
        android:layout_width="@dimen/login_width"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_layout_logo_imgvw"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/logo_hive" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_username_txtietxt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:textSize="@dimen/text_medium" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_layout_password_txtietxt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/input_margin_top"
            android:hint="@string/password_hint_login"
            android:inputType="textPassword"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/login_layout_login_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/input_margin_top"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/login_button_label"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/text_medium" />
        <!--android:background="@drawable/round_black_button"/-->

        <TextView
            android:id="@+id/login_layout_problem_txtvw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:gravity="center"
            android:text=""
            android:textSize="@dimen/text_small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout_signin_lnlay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/login_layout_noaccount_txtvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:text="@string/sign_in_label1"/>

        <TextView
            android:id="@+id/login_layout_signin_txtvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_pgrsbar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>